[gd_scene load_steps=5 format=2]

[ext_resource path="res://Default_theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/ProfileCard.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20
anti_aliasing_size = 2.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.588235 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20
anti_aliasing_size = 2.0

[node name="ProfileCard" type="Button"]
margin_right = 120.0
margin_bottom = 160.0
rect_min_size = Vector2( 150, 200 )
focus_mode = 0
theme = ExtResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MC" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewProfile" type="Label" parent="MC"]
margin_left = 12.0
margin_top = 58.0
margin_right = 142.0
margin_bottom = 142.0
text = "NEW
PROFILE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBC" type="VBoxContainer" parent="MC"]
visible = false
margin_left = 12.0
margin_top = 12.0
margin_right = 142.0
margin_bottom = 188.0

[node name="ServerName" type="Label" parent="MC/VBC"]
margin_right = 126.0
margin_bottom = 39.0
text = "SILVER"
align = 1
valign = 1

[node name="HS" type="HSeparator" parent="MC/VBC"]
margin_top = 47.0
margin_right = 126.0
margin_bottom = 129.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Username" type="Label" parent="MC/VBC"]
margin_top = 137.0
margin_right = 126.0
margin_bottom = 176.0
text = "Slowpoke"
align = 1
valign = 2
autowrap = true

[connection signal="pressed" from="." to="." method="_on_ProfileCard_pressed"]
